# ember

./: LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: cli.rst  conf.py  ember_py.rst  index.rst  modules.rst
docs/_build/doctrees/: cli.doctree  ember_py.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  ember_py.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: ember_py.rst.txt  index.rst.txt
docs/_build/latex/: ember_py.aux  ember_py.fdb_latexmk  ember_py.fls  ember_py.idx  ember_py.ilg  ember_py.ind  ember_py.out  ember_py.tex  ember_py.toc
ember/: __init__.py  generate_entropy_metrics.py  generate_pvals.py  run_ember.py
src/ember/: LICENSE  README.md  __init__.py  __main__.py  cli.py  generate_entropy_metrics.py  generate_entropy_metrics_optimized.py  generate_pvals.py  light_ember.py  make_alluvial_plot.py  plots.py  run_ember.py  sample_individuals.py  sample_replicates.py  top_genes.py
src/ember/.ipynb_checkpoints/: plots-checkpoint.py
src/ember_py/: cli.py  generate_entropy_metrics.py  generate_pvals.py  light_ember.py  sample_replicates.py  top_genes.py
