[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ember"                      # the distribution name on PyPI (can be "ember-package" if "ember" is taken)
version = "0.1.0"
description = "ember: Entropy Metrics for Biological ExploRation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }          
authors = [{ name = "Nikhila Swarna", email = "nswarna@caltech.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",                   # array math
    "pandas>=2.0",                    # dataframes
    "scanpy>=1.9",                     # single-cell analysis
    "scipy>=1.11",                     # scientific computing, sparse matrices, stats
    "statsmodels>=0.14",               # statistical models, multipletests
    "joblib>=1.3",                     # parallel processing
]


[tool.hatch.build.targets.wheel]
packages = ["ember"]            # tell hatch where your package lives (src layout)


