[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ember"
version = "0.1.0"
description = "ember: Entropy Metrics for Biological ExploRation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }          
authors = [{ name = "Nikhila P. Swarna", email = "nswarna@caltech.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.0,<=2.2",
    "pandas>=2.0",
    "scanpy>=1.9",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "adjustText>=0.8",
]

[project.scripts]
ember = "ember.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ember"]